--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -31,6 +31,12 @@
       <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>standard</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+
 
   </dependencies>
   <build>
