--- a/springmvc_crud/pom.xml
+++ b/springmvc_crud/pom.xml
@@ -39,9 +39,16 @@
       <artifactId>javax.el-api</artifactId>
       <version>2.2.4</version>
     </dependency>
-
-
-
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.8.8</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>springmvc_crud</finalName>
