--- a/test_mybatis/src/main/resources/db.properties
+++ b/test_mybatis/src/main/resources/db.properties
@@ -1,4 +1,8 @@
-driverClass=pleace input driverClass
-jdbcUrl=pleace input jdbcUrl
-username=pleace input username
-password=pleace input password
+driverClass=com.mysql.jdbc.Driver
+jdbcUrl=jdbc:mysql://120.24.244.103:3306/TestMybatis
+username=kylin
+password=123456
+oracle.driverClass=oracle.jdbc.driver.OracleDriver
+oracle.jdbcUrl=jdbc:oracle:thin:@localhost:1521:orcl
+oracle.username=store
+oracle.password=123456
