--- a/test_mybatis/src/main/resources/db.properties
+++ b/test_mybatis/src/main/resources/db.properties
@@ -6,4 +6,4 @@ oracle.driverClass=oracle.jdbc.driver.OracleDriver
 oracle.jdbcUrl=jdbc:oracle:thin:@localhost:1521:orcl
 oracle.username=store
 oracle.password=123456
-testIgnore=12345678
+testIgnore=1234567891011
