--- a/HelloAndroidStudio/app/src/main/AndroidManifest.xml
+++ b/HelloAndroidStudio/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,7 +32,7 @@
             android:name=".TestListView"
             android:label="@string/title_activity_test_list_view"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".TestSimpleAdapter" />
+        <activity android:name=".TestSimpleAdapter"  android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"/>
         <activity android:name=".TestBaseAdater" />
         <activity android:name=".TestStyleAndTheme"></activity>
     </application>
